[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/GlassNeonScoreboard.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://projectiles/soccer_ball.png" id="2_ball"]

[node name="GlassNeonScoreboard" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 8

[node name="HBoxMain" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SpacerLeft" type="Control" parent="Margin/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoPanel" type="PanelContainer" parent="Margin/HBoxMain"]
custom_minimum_size = Vector2(760, 52)
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxInfo" type="HBoxContainer" parent="Margin/HBoxMain/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1
size_flags_horizontal = 3

[node name="WaveLabel" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "W1  1v10"
horizontal_alignment = 1
size_flags_horizontal = 0

[node name="Divider1" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "•"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "10 ENEMIES"
horizontal_alignment = 1
size_flags_horizontal = 0

[node name="Divider2" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "•"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ARENA ACTIVE"
horizontal_alignment = 1
size_flags_horizontal = 0

[node name="Divider3" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "•"
horizontal_alignment = 1

[node name="ZoneLabel" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1
size_flags_horizontal = 0

[node name="Divider4" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "•"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="Margin/HBoxMain/InfoPanel/HBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "2:00"
horizontal_alignment = 1
size_flags_horizontal = 0

[node name="SpacerRight" type="Control" parent="Margin/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
